--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,3 +11,40 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+.noto-sans {
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.white-blue {
+	color: #EFECFF;
+}
+
+.lobby-title {
+	font-size: calc(1.625rem + 5vw);
+	font-weight: 900;
+	line-height: 100%;
+}
+
+.lobby-btn {
+	--bs-btn-font-size: calc(0.5rem + 1.5vw);
+	--bs-btn-border-width: 5px;
+	font-weight: 900;
+}
+
+.main-link {
+	font-weight: 700;
+	font-size: 5rem;
+}
+
+@media (min-width: 1400px) {
+	.lobby-title {
+		font-size: 6rem;
+	}
+	.lobby-btn {
+		--bs-btn-font-size: 2rem;
+	}
+}
