--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -87,14 +87,63 @@ input[type='number'] {
 	}
 }
 
-/* ------------ */
-/* Room 관련 CSS */
-/* ------------ */
+/* -----------------------------   Room 관련 CSS    -----------------------------*/
 
 .ready-style {
-    background-color: #4D37C6;
+	background-color: #4D37C6;
 }
 
 .card-img-top {
 	height: 100%;
+}
+
+/* -----------------------------   Tdata 관련 CSS    -----------------------------*/
+
+.b {
+	max-width: 800px;
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
+
+.timestemp {
+	margin-top: 30px;
+	text-align: center;
+	max-width: 200px;
+	font-weight:900;
+}
+
+.tdataBox{
+	border: 2px solid #4D37C6;
+	border-radius: 1rem;
+	margin: 20px;
+	border-width: 3px;
+}
+
+.game {
+	margin: 5px;
+	height: 30px;
+}
+
+.textAlign {
+	font-size: large;
+	text-align:center;
+	font-weight: 600;
+}
+.winner {
+	color: brown;
+}
+.game-rank {
+	border: 2px solid brown;
+	border-radius: 1rem;
+	width:80px;
+}
+.game-score {
+	font-size: larger;
+	font-weight: 900;
+	background: linear-gradient(to right, white, white, #FFC85D, white, white);
+}
+
+.text-end {
+	display: flex;
+	justify-content: center;
 }
