--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -119,7 +119,7 @@ input[type='number'] {
 	border-width: 3px;
 }
 
-.game {
+.gameLine {
 	margin: 5px;
 	height: 30px;
 }
@@ -143,7 +143,7 @@ input[type='number'] {
 	background: linear-gradient(to right, white, white, #FFC85D, white, white);
 }
 
-.text-end {
+.texte {
 	display: flex;
 	justify-content: center;
 }
