--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -98,3 +98,13 @@ input[type='number'] {
 .card-img-top {
 	height: 100%;
 }
+
+/* ---------------------- */
+/* Modal CSS from jijeong */
+/* ---------------------- */
+
+.modal-header-background-color {
+    background-color: #4D37C6;
+	width: 100%;
+	color: white;
+}
